socrates_bff/cicd/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: socrates-socket-server-deployment
  namespace: socket-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: socrates-socket-server
  template:
    metadata:
      labels:
        app: socrates-socket-server
    spec:
      containers:
      - name: socrates-socket-server
        image: "gcr.io/ups-next-tracking-as-a-service/clips-socrates:latest"
        imagePullPolicy: Always
        ports:
        - name: http-server
          containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: socrates-socket-server
  name: socrates-socket-server-service
  namespace: socket-server
spec:
  ports:
  - port: 80
    targetPort: http-server
    protocol: TCP
  selector:
    app: socrates-socket-server
  type: LoadBalancer
  sessionAffinity: ClientIP
